# connexity

./: .env.example  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CLI_README.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.build.yml  docker-compose.voice.build.yml  docker-compose.voice.yml  docker-compose.yml  openapi.json  package-lock.json  pyproject.toml  release-please-config.json
.claude/skills/announce-release/: SKILL.md
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yml  publish-docker-ghcr.yml  publish-pypi.yml  release-please.yml
backend/: Dockerfile  Dockerfile.dev  Dockerfile.voice  pyproject.toml  railway.toml
backend/app/: crud.py  main.py  models.py  seed_demo_data.py  utils.py
backend/app/api/: deps.py  main.py
backend/app/core/: config.py  db.py  encryption.py  security.py
backend/app/crud/: __init__.py  agent.py  agent_version.py  call.py  company.py  custom_metrics.py  deployments.py  environments.py  eval_config.py  integrations.py  prompt_edit.py  prompt_editor_message.py  prompt_editor_session.py  run.py  test_case.py  test_case_result.py  user.py  voice_simulation_job.py
backend/app/models/: __init__.py  agent.py  agent_version.py  call.py  common.py  company.py  comparison.py  custom_metric.py  deployment.py  enums.py  environment.py  eval_config.py  imported_platform_config.py  integration.py  oauth.py  prompt_editor.py  run.py  scenario.py  schemas.py  test_case.py  test_case_result.py  user.py  voice_simulation_job.py  webhook_payload.py
backend/app/services/: agent_simulator.py  agent_tool_definitions.py  diff.py  (+23 more)
backend/cli/: CHANGELOG.md  _version.py  main.py  output.py
backend/scripts/: entrypoint.sh  prestart.sh  prod.sh  simulate_convo.py  test_run_sse.py
docs/: README.md  data-model.md  eval-engines.md  eval-runtimes.md  judge-criteria.md  railway.md  release-cycle.md  scoring-and-thresholds.md  text-agent-contract.md  voice-agent-contract.md
docs-internal/: README.md  mcp-architecture.md  railway-template.md
docs-internal/releases/: cycle.md  platform.md  pypi.md
docs/agents/: contract.md
docs/evals/: runtimes.md
docs/proposals/: multi-prompt-agents.md
docs/self-hosting/: docker-compose.md  kubernetes.md  railway.md
examples/eval-configs/: voice-smoke.json
examples/integrations/: README.md  langchain_agent.py  raw_python_agent.py
examples/mock-text-agent/: README.md  main.py
examples/mock-voice-agent/: README.md  bot.py  connexity.py  env.example  main.py  pyproject.toml  settings.py  tools.py
examples/mock_agent/: README.md  main.py
examples/test-cases/: multi-turn-escalation.json  normal-refund-request.json  tool-heavy-order-management.json
frontend/: Dockerfile  package.json  pnpm-lock.yaml  turbo.json
mcp_server/: Dockerfile  Makefile  README.md  pyproject.toml  railway.toml
mcp_server/src/connexity_mcp_server/: __init__.py  __main__.py  app.py  auth.py  client.py  config.py  models.py  tools.py
mcp_server/tests/: test_auth.py  test_client.py
scripts/: benchmark_generation.py  cloud-run-backend-smoke.sh  railway-deploy.ps1
voice-worker/: Dockerfile  README.md  pyproject.toml
voice-worker/tests/: conftest.py  test_imports.py  test_main.py  test_services_and_dtmf.py  test_settings.py
voice-worker/voice_runner/: __init__.py  __main__.py  active_calls.py  main.py  persona.py  public_urls.py  services.py  settings.py  twilio_voice.py  worker.py
voice-worker/voice_runner/bot/: dtmf_audio_emitter.py  dtmf_pcm.py  pipeline.py
(+423 files in other folders)
