[project]
name = "connexity-mcp-server"
version = "0.1.0"
description = "Standalone MCP adapter service for Connexity."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "mcp>=1.12.0,<2.0.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "uvicorn>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
]

[project.scripts]
connexity-mcp-server = "connexity_mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/connexity_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "src/connexity_mcp_server/**",
    "pyproject.toml",
    "README.md",
]
