[project]
name = "voice-worker"
version = "0.1.0"
description = "Connexity Pipecat/Twilio voice worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "connexity",
    "fastapi[standard]>=0.114.2,<1.0.0",
    "uvicorn[standard]>=0.30.0",
    "twilio>=9.4.0",
    "pydantic-settings>=2.2.1",
    "pipecat-ai[silero,deepgram,cartesia,elevenlabs,openai,anthropic,google]==1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4.4,<8.0.0",
    "pytest-asyncio>=0.23.8,<0.24.0",
    "pyright>=1.1.390",
    "ruff>=0.2.2,<1.0.0",
]

[tool.uv.sources]
connexity = { path = "../backend", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voice_runner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "basic"
exclude = ["**/.venv", "**/venv"]
include = ["voice_runner", "tests"]
reportArgumentType = "warning"
reportAssignmentType = "warning"
reportOperatorIssue = "warning"
reportOptionalSubscript = "warning"
reportOptionalMemberAccess = "warning"
reportIndexIssue = "warning"
reportCallIssue = "warning"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG001",
]
ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ARG001"]
